roles/firewall/files/iptables.save
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FROM_LL - [0:0]
:FROM_PUBLIC - [0:0]
:FROM_NETWORK - [0:0]
:FROM_NMS - [0:0]
:FROM_TRUSTED - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j LOG --log-prefix "DROP INVALID: "
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j FROM_LL
-A INPUT -j FROM_PUBLIC
-A INPUT -s 10.0.2.0/24 -j FROM_TRUSTED
-A INPUT -s 10.0.3.0/32 -j FROM_TRUSTED
-A INPUT -s 10.0.3.0/24 -j FROM_NETWORK
-A INPUT -s 10.0.3.10/32 -j FROM_NMS
-A INPUT -j LOG --log-prefix "DROP INPUT: "
-A FROM_LL -j RETURN
-A FROM_PUBLIC -j RETURN
-A FROM_NETWORK -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A FROM_NETWORK -j RETURN
-A FROM_NMS -j RETURN
-A FROM_TRUSTED -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A FROM_TRUSTED -j RETURN
COMMIT
